--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: your.email@example.com
 description: >-
   A short description of your site.
 baseurl: "" 
-url: "https://sinee-x.github.io" 
+url: "https://sinee-x.github.io/blog" 
 
 # Theme settings
 theme: minima
